# rivet

./: ChangeLog  Doxyfile.in  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  rivet.pc  rivet.pc.in  rivetenv.csh.in  rivetenv.sh.in
analyses/: Makefile.am  Makefile.in
analyses/pluginALICE/: ALICE_2010_I880049.cc  ALICE_2010_I880049.info  ALICE_2010_I880049.plot  ALICE_2010_I880049.yoda  ALICE_2010_S8624100.cc  ALICE_2010_S8624100.info  ALICE_2010_S8624100.plot  ALICE_2010_S8625980.cc  ALICE_2010_S8625980.info  ALICE_2010_S8625980.plot  ALICE_2010_S8706239.cc  ALICE_2010_S8706239.info  ALICE_2010_S8706239.plot  ALICE_2011_S8909580.cc  ALICE_2011_S8909580.info  ALICE_2011_S8909580.plot  ALICE_2011_S8909580.yoda  ALICE_2011_S8945144.cc  ALICE_2011_S8945144.plot  ALICE_2012_I1116147.cc  ALICE_2012_I1116147.info  ALICE_2012_I1116147.plot  ALICE_2012_I1126966.cc  ALICE_2012_I1126966.info  ALICE_2012_I1126966.plot  ALICE_2012_I1126966.yoda  ALICE_2012_I1127497.cc  ALICE_2012_I1127497.info  ALICE_2012_I1127497.plot  ALICE_2012_I1181770.cc  ALICE_2012_I1181770.info  ALICE_2012_I1181770.plot  ALICE_2012_I930312.cc  ALICE_2012_I930312.info  ALICE_2012_I930312.plot  ALICE_2012_I944757.cc  ALICE_2012_I944757.info  ALICE_2012_I944757.plot  ALICE_2012_I944757.yoda  ALICE_2013_I1225979.cc  (+59 more)
analyses/pluginATLAS/: ATLAS_2010_CONF_2010_049.cc  ATLAS_2010_CONF_2010_049.info  ATLAS_2010_CONF_2010_049.plot  ATLAS_2010_S8591806.cc  ATLAS_2010_S8591806.info  ATLAS_2010_S8817804.cc  ATLAS_2010_S8817804.info  ATLAS_2010_S8817804.plot  ATLAS_2010_S8894728.cc  ATLAS_2010_S8894728.info  ATLAS_2010_S8894728.plot  ATLAS_2010_S8914702.cc  ATLAS_2010_S8914702.info  ATLAS_2010_S8918562.cc  ATLAS_2010_S8918562.info  ATLAS_2010_S8918562.plot  ATLAS_2010_S8918562.yoda  ATLAS_2010_S8919674.cc  ATLAS_2010_S8919674.info  ATLAS_2010_S8919674.plot  ATLAS_2011_CONF_2011_090.cc  ATLAS_2011_CONF_2011_090.info  ATLAS_2011_CONF_2011_090.plot  ATLAS_2011_CONF_2011_098.cc  ATLAS_2011_CONF_2011_098.info  ATLAS_2011_CONF_2011_098.plot  ATLAS_2011_I894867.cc  ATLAS_2011_I894867.info  ATLAS_2011_I894867.plot  ATLAS_2011_I919017.cc  ATLAS_2011_I919017.info  ATLAS_2011_I919017.plot  ATLAS_2011_I921594.cc  ATLAS_2011_I921594.info  ATLAS_2011_I925932.cc  ATLAS_2011_I925932.info  ATLAS_2011_I926145.cc  ATLAS_2011_I926145.info  ATLAS_2011_I926145.plot  ATLAS_2011_I928289_W.cc  (+678 more)
analyses/pluginBABAR/: BABAR_2001_I558091.cc  BABAR_2001_I558091.info  BABAR_2001_I558091.plot  BABAR_2001_I558091.yoda  BABAR_2002_I582184.cc  BABAR_2002_I582184.info  BABAR_2002_I582184.plot  BABAR_2002_I582184.yoda  BABAR_2003_I593379.cc  BABAR_2003_I593379.info  BABAR_2003_I593379.plot  BABAR_2004_I632399.cc  BABAR_2004_I632399.info  BABAR_2004_I632399.plot  BABAR_2004_I632399.yoda  BABAR_2004_I642355.cc  BABAR_2004_I642355.info  BABAR_2004_I642355.plot  BABAR_2004_I642355.yoda  BABAR_2004_I656680.cc  BABAR_2004_I656680.info  BABAR_2004_I656680.plot  BABAR_2004_I656680.yoda  BABAR_2005_I676691.cc  BABAR_2005_I676691.info  BABAR_2005_I676691.plot  BABAR_2005_I676691.yoda  BABAR_2005_S6181155.cc  BABAR_2005_S6181155.info  BABAR_2005_S6181155.plot  BABAR_2005_S6181155.yoda  BABAR_2006_I700020.cc  BABAR_2006_I700020.info  BABAR_2006_I700020.plot  BABAR_2006_I700020.yoda  BABAR_2006_I709730.cc  BABAR_2006_I709730.info  BABAR_2006_I709730.plot  BABAR_2006_I709730.yoda  BABAR_2006_I714447.cc  (+209 more)
analyses/pluginBELLE/: BELLE_2001_S4598261.cc  BELLE_2001_S4598261.info  BELLE_2001_S4598261.plot  BELLE_2002_I563840.cc  BELLE_2002_I563840.info  BELLE_2002_I563840.plot  BELLE_2002_I563840.yoda  BELLE_2003_I629334.cc  BELLE_2003_I629334.info  BELLE_2003_I629334.plot  BELLE_2003_I629334.yoda  BELLE_2004_I668024.cc  BELLE_2004_I668024.info  BELLE_2004_I668024.plot  BELLE_2004_I668024.yoda  BELLE_2005_I667712.cc  BELLE_2005_I667712.info  BELLE_2005_I667712.plot  BELLE_2005_I667712.yoda  BELLE_2005_I686014.cc  BELLE_2005_I686014.info  BELLE_2005_I686014.plot  BELLE_2005_I686014.yoda  BELLE_2006_I725750.cc  BELLE_2006_I725750.info  BELLE_2006_I725750.plot  BELLE_2006_I725750.yoda  BELLE_2007_I723333.cc  BELLE_2007_I723333.info  BELLE_2007_I723333.plot  BELLE_2007_I723333.yoda  BELLE_2007_I749358.cc  BELLE_2007_I749358.info  BELLE_2007_I749358.plot  BELLE_2007_I749358.yoda  BELLE_2007_I753243.cc  BELLE_2007_I753243.info  BELLE_2007_I753243.plot  BELLE_2007_I753243.yoda  BELLE_2007_I756012.cc  (+157 more)
analyses/pluginBES/: BESIII_2012_I1113599.cc  BESIII_2012_I1113599.info  BESIII_2012_I1113599.plot  BESIII_2012_I1113599.yoda  BESIII_2012_I1121378.cc  BESIII_2012_I1121378.info  BESIII_2012_I1121378.plot  BESIII_2012_I1121378.yoda  BESIII_2014_I1286898.cc  BESIII_2014_I1286898.info  BESIII_2014_I1286898.plot  BESIII_2014_I1286898.yoda  BESIII_2014_I1323621.cc  BESIII_2014_I1323621.info  BESIII_2014_I1323621.plot  BESIII_2014_I1323621.yoda  BESIII_2015_I1329785.cc  BESIII_2015_I1329785.info  BESIII_2015_I1329785.plot  BESIII_2015_I1329785.yoda  BESIII_2015_I1355215.cc  BESIII_2015_I1355215.info  BESIII_2015_I1355215.plot  BESIII_2015_I1355215.yoda  BESIII_2015_I1358937.cc  BESIII_2015_I1358937.info  BESIII_2015_I1358937.plot  BESIII_2015_I1358937.yoda  BESIII_2015_I1364494.cc  BESIII_2015_I1364494.info  BESIII_2015_I1364494.plot  BESIII_2015_I1364494.yoda  BESIII_2015_I1377204.cc  BESIII_2015_I1377204.info  BESIII_2015_I1377204.plot  BESIII_2015_I1377204.yoda  BESIII_2015_I1391138.cc  BESIII_2015_I1391138.info  BESIII_2015_I1391138.plot  BESIII_2015_I1391138.yoda  (+340 more)
analyses/pluginCDF/: CDF_1988_S1865951.cc  CDF_1988_S1865951.info  CDF_1990_S2089246.cc  CDF_1990_S2089246.info  (+104 more)
doc/: Makefile.am  Makefile.in  compare-histos.html  diffanas.in  gettingstarted.tex  intro.tex  make-plots.html  make-plots.txt  mk-analysis-html  mk-analysis-json  mk-coverage-html  mk-coverage-htmls  rivet-manual.tex  writinganalyses.tex
pyext/: Makefile.am  Makefile.in  setup.py.in
src/: Makefile.am  Makefile.in
test/: Makefile.am  Makefile.in  testApi.cc  testApi.sh  testBeams.cc  testCmdLine.sh  testCmp.cc  testImport.sh  testMatVec.cc  testMath.cc  testNaN.cc  testNaN.sh
(+5042 files in other folders)
